<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Button_exercises</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="redRadio">Red</string>
    <string name="blueRadio">Blue</string>
    <string name="yellowRadio">Yellow</string>
</resources>
