<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="info.slidingmenu.model.my.button_exercises.app.MainActivity">


    <Button
        android:id="@+id/red"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical"
        android:text="@string/red" />

    <Button
        android:id="@+id/blue"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical"
        android:text="@string/blue" />

    <Button
        android:id="@+id/yellow"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical"
        android:text="@string/yellow" />

    <RadioGroup
        android:id="@+id/color_region"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/redRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redRadio" />

        <RadioButton
            android:id="@+id/blueRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blueRadio" />

        <RadioButton
            android:id="@+id/yellowRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yellowRadio" />
    </RadioGroup>

    <TextView
        android:id="@+id/textview2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    />
</LinearLayout>
